--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "src/assets/Footer-with-button-logo.css",
               "src/styles.css"
             ],
             "scripts": [
